[gd_scene load_steps=20 format=2]

[ext_resource path="res://environment/Basement.png" type="Texture" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://shaders/trip.shader" type="Shader" id=3]
[ext_resource path="res://scenes/InteractPoint.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Basement.gd" type="Script" id=5]
[ext_resource path="res://utils/wall.png" type="Texture" id=6]
[ext_resource path="res://utils/boot.png" type="Texture" id=7]
[ext_resource path="res://shaders/fog.shader" type="Shader" id=8]
[ext_resource path="res://utils/white_noise_1.png" type="Texture" id=9]
[ext_resource path="res://scripts/Boot.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 421.333, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 170 )

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 7.26428, -22.3114, -15.9093, 11.5205, 15.9093, -11.5205, 46.948, -40.7893, -25.0546, 8.79507, 25.0546, -8.79507, 130.208, -75.8424, -30.5382, -1.88508, 30.5382, 1.88508, 186.76, -93.1851, 0, 0, 0, 0, 226.347, -79.6125, 0, 0, 0, 0, 268.949, -55.1065, 0, 0, 0, 0, 294.586, -27.9614, 0, 0, 0, 0, 309.378, -21.8612 )
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6.98309, 9.18872 )

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 3 )
shader_param/color = null

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 16.7084, 77.0855 )

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 3 )
shader_param/color = null

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 8 )
shader_param/color = Vector3( 0.35, 0.48, 0.95 )
shader_param/OCTAVES = 4

[node name="Basement" type="Node2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 330, 169.775 )
texture = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 10, 270 )
collision_layer = 3

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 0.135254, 2.97549 )
polygon = PoolVector2Array( 2.18174, 286.753, 17.7402, 286.753, 17.7402, 290.768, 26.7742, 290.768, 26.7742, 294.783, 35.9336, 294.658, 36.1846, 298.673, 21.2534, 298.422, 21.128, 294.658, 11.2157, 294.658, 11.3412, 290.392, 2.18174, 290.517 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D2"]
position = Vector2( 33.5431, 16.0952 )
polygon = PoolVector2Array( 2.18174, 286.753, 17.7402, 286.753, 17.7402, 290.768, 26.7742, 290.768, 26.5893, 294.86, 35.1103, 295.942, 36.1846, 298.673, 21.2534, 298.422, 21.128, 294.658, 11.2157, 294.658, 11.3412, 290.392, 2.18174, 290.517 )

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D3"]
position = Vector2( 66.6804, 28.6738 )
polygon = PoolVector2Array( 2.24348, 287.692, 15.9042, 287.556, 17.7402, 290.768, 26.7742, 290.768, 26.7742, 294.783, 35.9336, 294.658, 36.1846, 298.673, 21.2534, 298.422, 21.128, 294.658, 11.2157, 294.658, 11.3412, 290.392, 2.18174, 290.517 )

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D4"]
polygon = PoolVector2Array( 103.008, 327.862, 113.152, 327.727, 113.152, 330.161, 103.143, 330.026 )

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 245.352, 345 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource( 1 )

[node name="WallLeft" type="StaticBody2D" parent="."]
position = Vector2( -10.5226, 170 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallLeft"]
shape = SubResource( 2 )

[node name="WallRight" type="StaticBody2D" parent="."]
position = Vector2( 650, 180 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallRight"]
shape = SubResource( 2 )

[node name="VillainStartPosition" type="Position2D" parent="."]
position = Vector2( 272.9, 310.465 )

[node name="PrefightTrigger" type="Area2D" parent="."]
position = Vector2( 162.856, 329.908 )
collision_layer = 2
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PrefightTrigger"]
shape = SubResource( 3 )
disabled = true

[node name="couch_interact" parent="." instance=ExtResource( 4 )]
position = Vector2( 197.265, 324.917 )
isTransitionInteraction = true
transitionScene = "TV"
actionId = "special_mushrooms"

[node name="door_to_house_interact" parent="." instance=ExtResource( 4 )]
position = Vector2( 9.74354, 279.802 )
isTransitionInteraction = true
transitionScene = "House_inside"

[node name="VillainFightPosition" type="Position2D" parent="."]
position = Vector2( 585.463, 314.874 )

[node name="VillainPath" type="Path2D" parent="."]
position = Vector2( 269.421, 309.87 )
curve = SubResource( 4 )

[node name="PathToFollow" type="PathFollow2D" parent="VillainPath"]
position = Vector2( 7.26428, -22.3114 )
rotate = false

[node name="WallTrigger" type="Area2D" parent="."]
position = Vector2( 426.426, 327.057 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallTrigger"]
position = Vector2( 0.25708, -4.05219 )
shape = SubResource( 5 )

[node name="BorderLeft" type="StaticBody2D" parent="." groups=[
"borders",
]]
visible = false
position = Vector2( 350.469, 311.028 )
collision_layer = 2
collision_mask = 3
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BorderLeft"]
material = SubResource( 6 )
position = Vector2( -7.09134, -44.9118 )
scale = Vector2( 1.44321, 2.87132 )
texture = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape2D" parent="BorderLeft"]
position = Vector2( -0.900482, -53.3539 )
shape = SubResource( 7 )
disabled = true

[node name="BorderRight" type="Sprite" parent="." groups=[
"borders",
]]
visible = false
material = SubResource( 8 )
position = Vector2( 664.424, 266.116 )
scale = Vector2( 1.54873, 2.87132 )
texture = ExtResource( 6 )

[node name="Boot" type="KinematicBody2D" parent="."]
position = Vector2( 455.513, 134.242 )
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Boot"]
position = Vector2( -2.43286, 0.888306 )
scale = Vector2( 1.21869, 1.2724 )
texture = ExtResource( 7 )

[node name="BootCollisionShape" type="CollisionPolygon2D" parent="Boot"]
polygon = PoolVector2Array( -41.6783, 54.7836, -23.5732, 40.7465, -10.0516, 31.6366, -9.69653, -15.5513, 31.4525, -15.2419, 31.59, 30.2386, 31.8765, 35.3378, 32.7358, 36.0254, 32.6213, 53.3857, 30.6733, 56.0212, 11.3076, 56.4223, 7.18243, 55.5629, 3.34369, 55.5056, -1.18259, 57.5682, -41.4608, 57.912, -43.2369, 57.9693 )

[node name="fog" type="Sprite" parent="."]
material = SubResource( 9 )
position = Vector2( 329.794, 243.7 )
scale = Vector2( 41.0893, 11.4919 )
texture = ExtResource( 9 )

[node name="BootStartPosition" type="Position2D" parent="."]
position = Vector2( 455.065, 134.659 )
[connection signal="body_exited" from="PrefightTrigger" to="." method="_on_PrefightTrigger_body_exited"]
[connection signal="body_entered" from="WallTrigger" to="." method="_on_WallTrigger_body_entered"]
